--- a/projects/sdk/.vscode/launch.json
+++ b/projects/sdk/.vscode/launch.json
@@ -7,7 +7,7 @@
             "request": "launch",
             "mode": "auto",
             "program": "${workspaceFolder}/main.go",
-            "args": ["gen", "--dir", "schemas/", "--no-prompt"]
+            "args": []
         }
     ]
 }
